@@ -112,6 +112,7 @@ const char * fallback_ui_file =
 "      </menu>\n"
 "      <menu action='article-actions-menu'>\n"
 "        <menuitem action='save-articles' />\n"
+"        <menuitem action='save-articles-from-nzb' />\n"
 "        <separator />\n"
 "        <menuitem action='read-selected-article' />\n"
 "        <menuitem action='download-selected-article' />\n"
@@ -172,6 +173,7 @@ const char * fallback_ui_file =
 "\n"
 "  <popup name='header-pane-popup'>\n"
 "    <menuitem action='save-articles' />\n"
+"    <menuitem action='save-articles-from-nzb' />\n"
 "    <separator />\n"
 "    <menuitem action='read-selected-article' />\n"
 "    <menuitem action='download-selected-article' />\n"
