@@ -7,6 +7,7 @@
  433316 task window coordinates set to -32000 on Windows (Argoyne)
  436101 make nzb suffix filter case-insensitive (Darren Albers)
  348445 tweak menu text to reflect multiple group selections (Darren ALbers)
+ 361388 add ability to queue nzb's when viewing them (Adrian Yee)
   99936 better handling of task errors e.g. write permissions (gabrieltalks)
 
 0.129 "Benson & Hedges Moscow Gold"
